# serializer version: 1
# name: test_expansion_lineage_load_upstream
  list([
    dict({
      'field_data_version': dict({
        'frame_embedding': '1744805689831497403',
      }),
      'field_provenance': dict({
        'frame_embedding': '1744805689831497403',
      }),
      'video_id': 'v1',
    }),
    dict({
      'field_data_version': dict({
        'frame_embedding': '884350646134689240',
      }),
      'field_provenance': dict({
        'frame_embedding': '884350646134689240',
      }),
      'video_id': 'v2',
    }),
  ])
# ---
# name: test_expansion_lineage_resolve_increment_no_current
  list([
    dict({
      'field_data_version': dict({
        'frame_embedding': '1744805689831497403',
      }),
      'field_provenance': dict({
        'frame_embedding': '1744805689831497403',
      }),
      'video_id': 'v1',
    }),
    dict({
      'field_data_version': dict({
        'frame_embedding': '884350646134689240',
      }),
      'field_provenance': dict({
        'frame_embedding': '884350646134689240',
      }),
      'video_id': 'v2',
    }),
  ])
# ---
# name: test_identity_lineage_load_upstream
  list([
    dict({
      'field_data_version': dict({
        'default': '9646593030270266913',
      }),
      'field_provenance': dict({
        'default': '9646593030270266913',
      }),
      'sample_uid': 1,
    }),
    dict({
      'field_data_version': dict({
        'default': '6309806401145978549',
      }),
      'field_provenance': dict({
        'default': '6309806401145978549',
      }),
      'sample_uid': 2,
    }),
    dict({
      'field_data_version': dict({
        'default': '7283469191670294049',
      }),
      'field_provenance': dict({
        'default': '7283469191670294049',
      }),
      'sample_uid': 3,
    }),
  ])
# ---
